[workspace]
resolver = "2"

members = [
    "modules/axalloc",
    "modules/axconfig",
    "modules/axdisplay",
    "modules/axdriver",
    "modules/axfs-ng",
    "modules/axhal",
    "modules/axinput",
    "modules/axlog",
    "modules/axmm",
    "modules/axdma",
    "modules/axnet",
    "modules/axruntime",
    "modules/axsync",
    "modules/axtask",
    "modules/axipi",

    "api/axfeat",
    
    "examples/helloworld",
    "examples/helloworld-myplat",
    "examples/httpclient",
    "examples/httpserver",
    "examples/shell",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
documentation = "https://arceos-org.github.io/arceos"
repository = "https://github.com/arceos-org/arceos"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[workspace.dependencies]
axstd = { path = "ulib/axstd" }
axlibc = { path = "ulib/axlibc" }

arceos_api = { path = "api/arceos_api" }
arceos_posix_api = { path = "api/arceos_posix_api" }
axfeat = { path = "api/axfeat" }

axalloc = { path = "modules/axalloc" }
axconfig = { path = "modules/axconfig" }
axdisplay = { path = "modules/axdisplay" }
axdriver = { path = "modules/axdriver" }
axfs-ng = { path = "modules/axfs-ng" }
axhal = { path = "modules/axhal" }
axinput = { path = "modules/axinput" }
axlog = { path = "modules/axlog" }
axmm = { path = "modules/axmm" }
axnet = { path = "modules/axnet" }
axruntime = { path = "modules/axruntime" }
axsync = { path = "modules/axsync" }
axtask = { path = "modules/axtask" }
axdma = { path = "modules/axdma" }
axipi = { path = "modules/axipi" }

allocator = { git = "https://github.com/arceos-org/allocator.git", tag = "v0.1.2", features = [
    "axerrno",
] }
axbacktrace = "0.1"
axcpu = { version = "0.3", git = "https://github.com/arceos-org/axcpu.git", tag = "dev-v03" }
axerrno = "0.2"
axfs-ng-vfs = "0.1"
axio = { version = "0.2", git = "https://github.com/arceos-org/axio.git", tag = "dev-v02" }
axplat = { git = "https://github.com/arceos-org/axplat_crates.git", tag = "dev-v03" }
axpoll = "0.1"
bindgen = "0.72"
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false }
crate_interface = "0.1.4"
enum_dispatch = "0.3.13"
event-listener = { version = "5.4.0", default-features = false }
hashbrown = "0.15.4"
kernel_guard = "0.1"
kspin = "0.1"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
lazyinit = "0.2"
lock_api = { version = "0.4", default-features = false }
log = "0.4"
memory_addr = "0.4"
page_table_entry = "0.5"
page_table_multiarch = { version = "0.5", git = "https://github.com/arceos-org/page_table_multiarch.git", tag = "dev-v05", features = [
    "axerrno",
] }
percpu = "0.2"
scope-local = "0.1"
spin = "0.10"
