[package]
name = "axdriver"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "ChengXiang Qi <kuangjux@outlook.com>",
]
description = "ArceOS device drivers"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axdriver"
documentation = "https://arceos-org.github.io/arceos/axdriver/index.html"

[features]
dyn = []
bus-mmio = []
bus-pci = ["dep:axdriver_pci", "dep:axhal", "dep:axconfig"]
block = ["axdriver_block"]
display = ["axdriver_display"]
input = ["axdriver_input"]
net = ["axdriver_net"]
vsock = ["axdriver_vsock"]

# Enabled by features `virtio-*`
virtio = ["axdriver_virtio", "dep:axalloc", "dep:axhal", "dep:axconfig"]

# various types of drivers
virtio-blk = ["block", "virtio", "axdriver_virtio/block"]
virtio-gpu = ["display", "virtio", "axdriver_virtio/gpu"]
virtio-input = ["input", "virtio", "axdriver_virtio/input"]
virtio-net = ["net", "virtio", "axdriver_virtio/net"]
virtio-socket = ["vsock", "virtio", "axdriver_virtio/socket"]
bcm2835-sdhci = ["block", "axdriver_block/bcm2835-sdhci"]
ramdisk = ["block", "axdriver_block/ramdisk", "dep:axhal", "dep:axconfig"]
sdmmc-gpt = [
    "block",
    "axdriver_block/sdmmc",
    "axdriver_block/gpt",
    "dep:axhal",
    "dep:axconfig",
]
ixgbe = ["net", "axdriver_net/ixgbe", "dep:axalloc", "dep:axhal", "dep:axdma"]
fxmac = ["net", "axdriver_net/fxmac", "dep:axalloc", "dep:axhal", "dep:axdma"]
# more devices example: e1000 = ["net", "axdriver_net/e1000"]

[dependencies]
axalloc = { workspace = true, optional = true }
axconfig = { workspace = true, optional = true }
axdma = { workspace = true, optional = true }
axhal = { workspace = true, optional = true }

axdriver_base = { version = "0.1", git = "https://github.com/arceos-org/axdriver_crates.git", tag = "dev-v01" }
axdriver_block = { version = "0.1", git = "https://github.com/arceos-org/axdriver_crates.git", tag = "dev-v01", optional = true }
axdriver_display = { version = "0.1", git = "https://github.com/arceos-org/axdriver_crates.git", tag = "dev-v01", optional = true }
axdriver_input = { version = "0.1", git = "https://github.com/arceos-org/axdriver_crates.git", tag = "dev-v01", optional = true }
axdriver_net = { version = "0.1", git = "https://github.com/arceos-org/axdriver_crates.git", tag = "dev-v01", optional = true }
axdriver_pci = { version = "0.1", git = "https://github.com/arceos-org/axdriver_crates.git", tag = "dev-v01", optional = true }
axdriver_vsock = { version = "0.1", git = "https://github.com/arceos-org/axdriver_crates.git", tag = "dev-v01", optional = true }
axdriver_virtio = { version = "0.1", git = "https://github.com/arceos-org/axdriver_crates.git", tag = "dev-v01", optional = true }

cfg-if = { workspace = true }
crate_interface = { workspace = true }
log = { workspace = true }
smallvec = { version = "1.15.1", features = ["const_generics", "union"] }
